--- a/PA1.Rmd
+++ b/PA1.Rmd
@@ -37,6 +37,7 @@ median(stepsPerDay$steps, na.rm = TRUE)
 
 ## What is the average daily activity pattern?
 
+### Time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
 
 ## Imputing missing values
