--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,7 +13,9 @@ keep_md: true
 actData <- read.csv(unz("activity.zip", "activity.csv"))
 ```
 
-## What is mean total number of steps taken per day?  
+## What is mean total number of steps taken per day? 
+
+### 1. Make a histogram of the total number of steps taken each day
 ```{r, echo=TRUE}
 # Get total steps per day, ignore the missing values in the dataset
 stepsPerDay <- aggregate(steps ~ date, data = actData, sum, na.rm=TRUE)
@@ -23,19 +25,19 @@ hist(aggregate(steps ~ date, data = stepsPerDay, sum, na.rm=TRUE)$steps, main="T
      xlab="Steps")
 ```
 
-### Mean total number of steps taken per day  
+### 2. Mean total number of steps taken per day  
 ```{r, echo=TRUE}
 mean(stepsPerDay$steps, na.rm = TRUE)
 ```
 
-### Median total number of steps taken per day
+### 2. Median total number of steps taken per day
 ```{r, echo=TRUE}
 median(stepsPerDay$steps, na.rm = TRUE)
 ```
 
 ## What is the average daily activity pattern?
 
-### Time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+### 1. Time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
 ```{r, echo=TRUE}
 # Aggregate steps per interval and get average number of step
@@ -48,13 +50,25 @@ plot(stepsPerInterval$interval, stepsPerInterval$steps, type='l', main="Average 
      xlab="Interval", ylab="Average number of steps")
 ```
 
-### Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+### 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r, echo=TRUE}
 stepsPerInterval[which.max(stepsPerInterval$steps), "interval"]
 ```
 
 ## Imputing missing values
+### 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r, echo=TRUE}
+nrow(actData[is.na(actData$steps),])
+```
 
+### 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
+### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+### 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 ## Are there differences in activity patterns between weekdays and weekends?
+### 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+
+### 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
+
