--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -62,11 +62,38 @@ nrow(actData[is.na(actData$steps),])
 ```
 
 ### 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
-
+```{r}
+# Create tmp DS with addtional column with mean of steps by interval
+tmp <- merge(actData, aggregate(steps ~ interval, data = actData, mean, na.rm=TRUE), by=c("interval"))
+```
 ### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r, echo=TRUE}
+newDS <- actData
+# rewite NAs in stesp with mean by interval
+newDS[is.na(newDS$steps),"steps"] <- tmp[is.na(tmp$steps.x),"steps.y"]
+```
 
 ### 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r, echo=TRUE}
+stepsDayClean <- aggregate(steps ~ date, data = newDS, sum, na.rm=TRUE)
+hist(aggregate(steps ~ date, data = stepsDayClean, sum, na.rm=TRUE)$steps, main="Total number of steps per day", xlab="Steps")
+```  
 
+### Mean total number of steps taken per day  
+```{r, echo=TRUE}
+mean(stepsDayClean$steps, na.rm = TRUE)
+```
+
+### Median total number of steps taken per day
+```{r, echo=TRUE}
+median(stepsDayClean$steps, na.rm = TRUE)
+```
+
+Do these values differ from the estimates from the first part of the assignment?  
+A: mean not much, median yes  
+What is the impact of imputing missing data on the estimates of the total daily number of steps?  
+A: small change in the median, mean is the same since no outlier were introduced, just a chenge in the distribution.  
+  
 ## Are there differences in activity patterns between weekdays and weekends?
 ### 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
 
