--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -69,7 +69,7 @@ tmp <- merge(actData, aggregate(steps ~ interval, data = actData, mean, na.rm=TR
 ### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 ```{r, echo=TRUE}
 newDS <- actData
-# rewite NAs in stesp with mean by interval
+# rewite NAs in stesp with mean by interval. mean by Interval replace NAs according with the interval
 newDS[is.na(newDS$steps),"steps"] <- tmp[is.na(tmp$steps.x),"steps.y"]
 ```
 
@@ -90,12 +90,21 @@ median(stepsDayClean$steps, na.rm = TRUE)
 ```
 
 Do these values differ from the estimates from the first part of the assignment?  
-A: mean not much, median yes  
+*A: mean not much, median yes.*  
+
 What is the impact of imputing missing data on the estimates of the total daily number of steps?  
-A: small change in the median, mean is the same since no outlier were introduced, just a chenge in the distribution.  
+*A: small change in the median, mean is the same since no outlier were introduced, just a chenge in the distribution due to the use of mean*  
+*by interval to replace NAs.*  
   
 ## Are there differences in activity patterns between weekdays and weekends?
 ### 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r, echo=TRUE}
+newDS$dow <- weekdays(as.Date(newDS$date, "%Y-%m-%d"))
+newDS$type <- ifelse(newDS$dow %in% c("Saturday","Sunday"),"weekend","weekday")
+```
 
 ### 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
-
+```{r, echo=TRUE}
+plot(newDS$interval, newDS$steps, type='l', main="Average number of steps by Interval", 
+     xlab="Interval", ylab="Average number of steps")
+```{r, echo=TRUE}
