--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -81,6 +81,7 @@ newDS <- tmp[,c("steps","date","interval")]
 
 ### 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
 ```{r, echo=TRUE}
+#Get total Steps from imputed data
 stepsDayClean <- aggregate(steps ~ date, data = newDS, sum, na.rm=TRUE)
 hist(aggregate(steps ~ date, data = stepsDayClean, sum, na.rm=TRUE)$steps, 
      main="Total number of steps per day", xlab="Steps")
