--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -69,7 +69,7 @@ nrow(actData[is.na(actData$steps),])
 # Create tmp DS with addtional column with mean of steps by interval
 tmp <- merge(actData, aggregate(steps ~ interval, data = actData, mean, na.rm=TRUE), by=c("interval"))
 
-# rewrite NAs in steps (steps.x) with mean by interval (steps.y). 
+# then rewrite NAs in steps (steps.x) with mean by interval (steps.y) and rename column with steps
 tmp[is.na(tmp$steps.x),"steps.x"] <- tmp[is.na(tmp$steps.x),"steps.y"]
 names(tmp)[names(tmp) == "steps.x"] <- "steps"
 ```
